--- a/NaviBar/app/src/main/res/drawable/show_all_button.xml
+++ b/NaviBar/app/src/main/res/drawable/show_all_button.xml
@@ -16,6 +16,6 @@
         />
     <stroke
         android:width="1dp"
-        android:color="#fff"
+        android:color="@color/red"
         />
 </shape>
