--- a/NaviBar/app/src/main/res/layout/horizental_single_row.xml
+++ b/NaviBar/app/src/main/res/layout/horizental_single_row.xml
@@ -8,9 +8,12 @@
     android:elevation="5dp"
     android:orientation="vertical"
     android:padding="5dp"
-    app:cardElevation="8dp">
+
+    app:cardElevation="8dp"
+    app:cardMaxElevation="8dp">
 
     <LinearLayout
+        android:background="@color/titleBarBkg"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -21,12 +24,14 @@
 
             <ImageView
                 android:id="@+id/image_view"
+                android:textStyle="bold"
                 android:layout_width="match_parent"
                 android:layout_height="220dp"
                 android:scaleType="centerCrop" />
 
             <TextView
                 android:id="@+id/title"
+                android:textStyle="bold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
@@ -42,19 +47,33 @@
 
         </FrameLayout>
 
-        <TextView
-            android:id="@+id/description"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:text="This is the description" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/published_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:text="2018/10/10" />
+            <TextView
+                android:id="@+id/description"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:text="This is the description"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/published_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_weight="1"
+                android:text="2018/10/10"
+                android:textColor="@color/white" />
+
+        </LinearLayout>
 
     </LinearLayout>
 </android.support.v7.widget.CardView>
