--- a/NaviBar/app/src/main/res/layout/horizontal.xml
+++ b/NaviBar/app/src/main/res/layout/horizontal.xml
@@ -10,27 +10,16 @@
         android:layout_height="50dp"
         android:id="@+id/type"
         android:text="Artists"
-        android:textColor="#fff"
+        android:textStyle="bold"
+        android:gravity="bottom"
+        android:textColor="@color/red"
         android:textSize="30sp"
-        android:layout_margin="10dp"/>
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/inner_recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <Button
-        android:id="@+id/btnShowAll"
-        android:layout_width="300dp"
-        android:layout_height="30dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_margin="5dp"
-        android:background="@drawable/show_all_button"
-        android:shadowColor="#A8A8A8"
-        android:shadowDx="0"
-        android:shadowDy="0"
-        android:shadowRadius="5"
-        android:text="Show All Artists"
-        android:textColor="#FFFFFF"
-        android:textSize="14sp" />
 </LinearLayout>
