--- a/NaviBar/app/src/main/res/values/colors.xml
+++ b/NaviBar/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="lightRed">#EF9A9A</color>
+    <color name="lightRed">#F4B0B0</color>
     <color name="red">#fa6f57</color>
     <color name="titleBarBkg">#fa6f57</color>
     <color name="darkRed">#B71C1C</color>
