--- a/NaviBar/app/src/main/res/layout/horizental_single_row.xml
+++ b/NaviBar/app/src/main/res/layout/horizental_single_row.xml
@@ -8,7 +8,7 @@
     android:elevation="5dp"
     android:orientation="vertical"
     android:padding="5dp"
-
+    app:cardCornerRadius="15dp"
     app:cardElevation="8dp"
     app:cardMaxElevation="8dp">
 
