--- a/NaviBar/app/src/main/res/layout/activity_event.xml
+++ b/NaviBar/app/src/main/res/layout/activity_event.xml
@@ -257,6 +257,7 @@
     </android.support.v4.widget.NestedScrollView>
 
     <android.support.design.widget.FloatingActionButton
+        android:id="@+id/btnAddEventSchedule"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="15dp"
