--- a/NaviBar/app/src/main/res/layout/customlist.xml
+++ b/NaviBar/app/src/main/res/layout/customlist.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
     android:layout_marginTop="30dp"
-    android:background="#FFFFFF">
+    android:background="#FFFFFF"
+    android:orientation="horizontal">
 
     <!-- icon -->
     <ImageView
@@ -13,28 +14,29 @@
         android:layout_height="28dp"
         android:layout_gravity="center"
         android:layout_alignParentLeft="true"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="8dp"
+        android:layout_margin="10dp"
         android:src="@drawable/website"
         />
 
     <!-- title -->
     <TextView
         android:id="@+id/item_title"
-        android:layout_width="250dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/item_icon"
-        android:layout_alignBaseline="@+id/item_counter"
         android:text="Settings"
         android:textColor="#111111"
-        android:layout_margin="8dp"
+        android:layout_margin="10dp"
         android:textSize="22dp" />
 
     <!-- counter -->
     <ImageView
         android:layout_width="28dp"
         android:layout_height="28dp"
-        android:layout_gravity="center"
-        android:src="@drawable/next" />
+        android:layout_alignParentRight="true"
+        android:layout_gravity="right"
+        android:layout_margin="10dp"
+        android:src="@drawable/next"
+        android:layout_alignParentEnd="true"/>
 
-</LinearLayout>
+</RelativeLayout>
