--- a/NaviBar/app/src/main/res/layout/fragment_schedule.xml
+++ b/NaviBar/app/src/main/res/layout/fragment_schedule.xml
@@ -16,28 +16,40 @@
         android:theme="?attr/actionBarTheme"
         >
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
         <TextView
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:text="Schedule"
             android:textColor="#fff"
+            android:layout_alignParentLeft="true"
             android:textSize="36sp"/>
 
         <Button
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:layout_marginRight="10dp"
+            android:layout_margin="10dp"
             android:id="@+id/menubtn"
+            android:layout_alignParentRight="true"
             android:background="@drawable/myschedule"/>
+
+        </RelativeLayout>
 
 
     </android.support.v7.widget.Toolbar>
 
+    <android.support.v4.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true">
     <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:nestedScrollingEnabled="false">
 
             <LinearLayout
                 android:orientation="horizontal"
@@ -87,12 +99,12 @@
 
                     <android.support.v7.widget.RecyclerView
                         android:id="@+id/rv"
-                        android:scrollbars="vertical"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_margin="5dp"
                         android:paddingLeft="10dp"
                         android:paddingRight="10dp"
+                        android:nestedScrollingEnabled="false"
 
                         ></android.support.v7.widget.RecyclerView>
 
@@ -103,7 +115,6 @@
             </LinearLayout>
             <LinearLayout
                 android:orientation="horizontal"
-                android:paddingTop="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -148,15 +159,14 @@
 
                     <android.support.v7.widget.RecyclerView
                         android:id="@+id/rv2"
-                        android:scrollbars="vertical"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_margin="5dp"
                         android:paddingLeft="10dp"
                         android:paddingRight="10dp"
+                        android:nestedScrollingEnabled="false">
 
-
-                        ></android.support.v7.widget.RecyclerView>
+                    </android.support.v7.widget.RecyclerView>
 
                 </LinearLayout>
 
@@ -166,6 +176,7 @@
 
 
         </LinearLayout>
+    </android.support.v4.widget.NestedScrollView>
 
 
 </LinearLayout>
