--- a/NaviBar/app/src/main/res/layout/rv_like_items.xml
+++ b/NaviBar/app/src/main/res/layout/rv_like_items.xml
@@ -22,7 +22,7 @@
             android:src="@drawable/jupiter_okwess"
             />
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_margin="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -32,8 +32,9 @@
                 android:id="@+id/item_name"
                 android:layout_width="280dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="2dp"
+                android:layout_marginLeft="10dp"
                 android:fontFamily="@font/lato_bold"
+                android:layout_alignParentLeft="true"
                 android:text="Jupiter and Okwess"
                 android:textColor="#FFFFFF"
                 android:textSize="23.5sp" />
@@ -42,8 +43,9 @@
                 android:id="@+id/likebtn"
                 android:layout_width="38dp"
                 android:layout_height="33dp"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="15dp"
+                android:layout_gravity="right"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="10dp"
                 android:background="@drawable/liked" />
 
 
@@ -53,7 +55,7 @@
 
 
 
-        </LinearLayout>
+        </RelativeLayout>
 
 
     </LinearLayout>
