--- a/NaviBar/app/src/main/res/layout/rv_schedule_items.xml
+++ b/NaviBar/app/src/main/res/layout/rv_schedule_items.xml
@@ -9,15 +9,16 @@
     android:id="@+id/schedule_event"
     android:background="@drawable/list_rounded_corner"
     >
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
     <LinearLayout
-        android:layout_width="250dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
+        android:layout_margin="10dp"
+        android:layout_alignParentLeft="true"
         android:orientation="vertical"
         >
 
@@ -26,7 +27,6 @@
                 android:layout_width="230dp"
                 android:layout_height="wrap_content"
                 android:text="Event One"
-                android:layout_marginLeft="2dp"
                 android:textSize="16sp"
                 android:textColor="@android:color/white"/>
 
@@ -34,8 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp">
+            android:layout_marginTop="5dp">
 
         <TextView
             android:id="@+id/item_from_time"
@@ -77,11 +76,13 @@
         <Button
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_gravity="center"
+            android:layout_gravity="right"
+            android:layout_margin="15dp"
+            android:layout_alignParentRight="true"
             android:id="@+id/item_status"
             android:background="@drawable/add"/>
 
-    </LinearLayout>
+    </RelativeLayout>
 
 
 </android.support.v7.widget.CardView>
