--- a/NaviBar/app/src/main/res/layout/fragment_schedule.xml
+++ b/NaviBar/app/src/main/res/layout/fragment_schedule.xml
@@ -93,7 +93,7 @@
                             android:layout_height="2dp"
                             android:layout_gravity="center_vertical"
                             android:paddingRight="10dp"
-                            android:src="@drawable/line_ffffff"
+                            android:src="@drawable/whiteline"
                             />
                     </LinearLayout>
 
@@ -153,7 +153,7 @@
                             android:layout_height="2dp"
                             android:layout_gravity="center_vertical"
                             android:paddingRight="10dp"
-                            android:src="@drawable/line_ffffff"
+                            android:src="@drawable/whiteline"
                             />
                     </LinearLayout>
 
