--- a/NaviBar/app/src/main/res/layout/fragment_schedule.xml
+++ b/NaviBar/app/src/main/res/layout/fragment_schedule.xml
@@ -69,7 +69,8 @@
                         android:paddingLeft="20dp"
                         android:paddingRight="20dp"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="0dp">
 
                         <TextView
                             android:layout_width="wrap_content"
