--- a/NaviBar/app/src/main/res/layout/fragment_schedule.xml
+++ b/NaviBar/app/src/main/res/layout/fragment_schedule.xml
@@ -65,36 +65,36 @@
                     android:layout_height="wrap_content">
 
                     <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:orientation="horizontal"
                         android:paddingLeft="20dp"
-                        android:paddingRight="20dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
+                        android:layout_gravity="top"
+                        android:paddingRight="20dp">
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Friday"
-                            android:textSize="20sp"
                             android:fontFamily="@font/lato_bold"
                             android:paddingRight="15dp"
-                            android:textColor="#FFFFFF"/>
+                            android:text="Friday"
+                            android:textColor="#FFFFFF"
+                            android:textSize="20sp" />
 
                         <ImageView
                             android:layout_width="15dp"
                             android:layout_height="15dp"
-                            android:scaleType="centerCrop"
                             android:layout_gravity="center"
-                            android:src="@drawable/circle_ffffff"
-                            />
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/circle_ffffff" />
+
                         <ImageView
-                            android:scaleType="center"
                             android:layout_width="match_parent"
                             android:layout_height="2dp"
                             android:layout_gravity="center_vertical"
                             android:paddingRight="10dp"
-                            android:src="@drawable/whiteline"
-                            />
+                            android:scaleType="center"
+                            android:src="@drawable/whiteline" />
                     </LinearLayout>
 
                     <android.support.v7.widget.RecyclerView
