update permission and calendar

--- a/NaviBar/app/src/main/res/layout/fragment_schedule.xml
+++ b/NaviBar/app/src/main/res/layout/fragment_schedule.xml
@@ -26,7 +26,8 @@
             android:text="Schedule"
             android:textColor="#fff"
             android:layout_alignParentLeft="true"
-            android:textSize="36sp"/>
+            android:textSize="36sp"
+            android:id="@+id/schedule"/>
 
         <Button
             android:layout_width="32dp"
@@ -35,6 +36,19 @@
             android:id="@+id/menubtn"
             android:layout_alignParentRight="true"
             android:background="@drawable/myschedule"/>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/addEvent"
+                android:text="Add"/>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/addEvent"
+                android:id="@+id/delete"
+                android:text="Delete"/>
 
         </RelativeLayout>
 
