--- a/NaviBar/app/src/main/res/layout/activity_main.xml
+++ b/NaviBar/app/src/main/res/layout/activity_main.xml
@@ -34,16 +34,35 @@
         android:layout_alignParentTop="true">
 
 
+
+        <!--<RelativeLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_gravity="bottom">-->
+
+
+        <!--</RelativeLayout>-->
+
+
     </FrameLayout>
 
     <com.google.android.gms.ads.AdView
         android:id="@+id/adView_bottom"
         android:layout_width="match_parent"
-        android:layout_height="35dp"
-        android:layout_above="@+id/navigation"
-        android:layout_alignParentStart="true"
-        android:layout_gravity="bottom"
-        ads:adSize="BANNER"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        ads:adSize="SMART_BANNER"
         ads:adUnitId="@string/banner_ad_unit_id" />
+    <Button
+        android:id="@+id/closeAds"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_above="@id/adView_bottom"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="25dp"
+        android:background="@drawable/cross" />
+
+    <!--</RelativeLayout>-->
+
 
 </RelativeLayout>
