--- a/NaviBar/app/src/main/res/layout/activity_main.xml
+++ b/NaviBar/app/src/main/res/layout/activity_main.xml
@@ -45,22 +45,30 @@
 
 
     </FrameLayout>
-
-    <com.google.android.gms.ads.AdView
-        android:id="@+id/adView_bottom"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_alignParentBottom="true"
-        ads:adSize="SMART_BANNER"
-        ads:adUnitId="@string/banner_ad_unit_id" />
     <Button
         android:id="@+id/closeAds"
         android:layout_width="25dp"
         android:layout_height="25dp"
-        android:layout_above="@id/adView_bottom"
+        android:layout_gravity="bottom|right"
+        android:layout_above="@id/navigation"
         android:layout_alignParentEnd="true"
-        android:layout_marginBottom="25dp"
+        android:layout_marginBottom="27dp"
         android:background="@drawable/cross" />
+
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:src="@drawable/bupardeelogo"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_alignParentEnd="true"
+        android:id="@+id/adView"
+        android:layout_above="@id/navigation"
+        android:scaleType="fitXY"
+        android:layout_gravity="bottom"/>
+
+
 
     <!--</RelativeLayout>-->
 
