--- a/NaviBar/app/src/main/res/layout/rv_schedule_items.xml
+++ b/NaviBar/app/src/main/res/layout/rv_schedule_items.xml
@@ -14,17 +14,28 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            android:layout_margin="15dp"
+            android:layout_alignParentLeft="true"
+            android:id="@+id/item_type"
+            android:background="@drawable/bazzar"/>
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:layout_alignParentLeft="true"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_toRightOf="@+id/item_type"
         android:orientation="vertical"
         >
 
+
         <TextView
                 android:id="@+id/item_name"
-                android:layout_width="230dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Event One"
                 android:textSize="16sp"
@@ -33,14 +44,12 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="5dp">
+            android:orientation="horizontal">
 
         <TextView
             android:id="@+id/item_from_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="2dp"
             android:fontFamily="@font/lato_italic"
             android:text="From"
             android:textColor="@android:color/white"
@@ -53,16 +62,15 @@
                 android:layout_marginRight="5dp"
                 android:fontFamily="@font/lato_italic"
                 android:id="@+id/item_at"
-                android:text="at"
+                android:text="To"
                 android:textColor="@android:color/white"
                 android:textSize="12sp"
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/item_location"
+                android:id="@+id/item_to_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="2dp"
                 android:fontFamily="@font/lato_italic"
                 android:text="To"
                 android:textColor="@android:color/white"
@@ -72,12 +80,21 @@
 
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/item_location"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="GSU Floor 2"
+            android:fontFamily="@font/lato_italic"
+            android:textSize="12sp"
+            android:textColor="@android:color/white" />
+
     </LinearLayout>
         <Button
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_gravity="right"
-            android:layout_margin="15dp"
+            android:layout_gravity="center"
+            android:layout_margin="20dp"
             android:layout_alignParentRight="true"
             android:id="@+id/item_status"
             android:background="@drawable/add"/>
