--- a/NaviBar/app/src/main/res/layout/fragment_map_gsu_2ndfloor.xml
+++ b/NaviBar/app/src/main/res/layout/fragment_map_gsu_2ndfloor.xml
@@ -28,14 +28,14 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
 
         <ImageButton
             android:id="@+id/gsu_2nfloor"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:src="@drawable/map_gsu_2ndfloor"/>
 
