--- a/NaviBar/app/src/main/res/layout/fragment_map_tsai.xml
+++ b/NaviBar/app/src/main/res/layout/fragment_map_tsai.xml
@@ -6,13 +6,13 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <ImageButton
             android:id="@+id/tsai"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:src="@drawable/map_tsai"/>
 
