--- a/NaviBar/app/src/main/res/layout/activity_artist.xml
+++ b/NaviBar/app/src/main/res/layout/activity_artist.xml
@@ -58,7 +58,8 @@
             android:id="@+id/llArtistEvents"
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:paddingBottom="50dp">
 
 
         </LinearLayout>
