--- a/NaviBar/app/src/main/res/layout/description_card.xml
+++ b/NaviBar/app/src/main/res/layout/description_card.xml
@@ -41,6 +41,7 @@ Zhou Jingzhi, founder of the Zhou Family Band, played in the Royal Court of the 
                 android:id="@+id/description_card_collapse_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@color/lightRed"
                 android:orientation="horizontal">
 
                 <ImageButton
