--- a/NaviBar/app/src/main/res/layout/event_card.xml
+++ b/NaviBar/app/src/main/res/layout/event_card.xml
@@ -66,6 +66,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/lightRed"
+                android:elevation="4dp"
                 android:orientation="horizontal">
 
                 <ImageButton
