--- a/NaviBar/app/src/main/res/layout/event_card.xml
+++ b/NaviBar/app/src/main/res/layout/event_card.xml
@@ -11,6 +11,13 @@
         app:cardCornerRadius="15dp"
         android:background="@color/red"
         >
+
+        <FrameLayout
+            android:id="@+id/event_card_highlight"
+            android:visibility="invisible"
+            android:background="#FF0000"
+            android:layout_width="6dp"
+            android:layout_height="match_parent"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
