--- a/NaviBar/app/src/main/res/layout/activity_event.xml
+++ b/NaviBar/app/src/main/res/layout/activity_event.xml
@@ -11,18 +11,16 @@
         android:id="@+id/app_bar_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         android:fitsSystemWindows="true"
-        >
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:layout_width="match_parent"
             android:layout_height="350dp"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            android:fitsSystemWindows="true"
             app:contentScrim="@color/red"
             app:expandedTitleTextAppearance="@android:color/transparent"
-            android:fitsSystemWindows="true"
-            >
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <ImageView
                 android:id="@+id/ivEvent"
@@ -36,22 +34,21 @@
                 android:id="@+id/tbEventTitle"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                app:title="Event One"
                 app:layout_collapseMode="pin"
-                >
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                app:title="Event One">
 
             </android.support.v7.widget.Toolbar>
 
             <ImageButton
                 android:id="@+id/imageButton2"
                 android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="top|right"
                 android:layout_margin="15dp"
-                android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
-                app:srcCompat="@drawable/ic_share"
-                android:elevation="10dp" />
+                android:elevation="10dp"
+                app:srcCompat="@drawable/ic_share" />
 
 
         </android.support.design.widget.CollapsingToolbarLayout>
